# belvedere

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  reload_config.sh
.github/workflows/: ci.yml
cmake/: belvedereConfig.cmake.in
etc/: default_config.ini
include/: config.h  debug.h  device_utils.h  hid_manager.h  input_manager.h  ipc.h
src/: belvedere.c  config.c  debug.c  device_utils.c  hid_manager.c  input_manager.c  ipc.c
tests/: ipc_test.c  mock_debug.c  mock_debug.h  test_config.c  test_config.ini  test_hid_manager.c  test_ipc.c  test_runner.c
